--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dailyme",
+  "name": "vshone",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -9,8 +9,8 @@
     "preview": "vite preview",
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
-    "lint": "vue-cli-service lint",
-    "format": "prettier .  --write"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
     "pinia": "^2.1.7",
@@ -25,18 +25,12 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
-    "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-vue": "^9.24.0",
+    "eslint": "^8.49.0",
+    "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.2",
-    "postcss": "^8.4.38",
     "prettier": "^3.0.3",
-    "tailwindcss": "^3.4.3",
     "typescript": "~5.4.0",
     "vite": "^5.1.6",
-    "vite-plugin-eslint": "^1.8.1",
     "vue-tsc": "^2.0.6"
   }
 }
