--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -5,6 +5,7 @@
   "compilerOptions": {
     "composite": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
+    "forceConsistentCasingInFileNames": false,
     "target": "ESNext",
     "module": "ESNext",
     "strict": true,
