--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.6.8",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.5",
     "element-plus": "^2.6.3",
+    "json-server": "^1.0.0-alpha.23",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
     "vue": "^3.4.21",
