--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "json-server": "^1.0.0-alpha.23",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^3.2.1",
+    "primevue": "^3.52.0",
+    "quill": "^2.0.2",
     "vue": "^3.4.21",
     "vue-i18n": "^9.10.2",
     "vue-router": "^4.3.0"
